--- a/src/components/MultiTab/index.less
+++ b/src/components/MultiTab/index.less
@@ -1,25 +1,45 @@
-@import '../index';
+@ant-pro-prefix: ant-pro;
 
-@multi-tab-prefix-cls: ~"@{ant-pro-prefix}-multi-tab";
-@multi-tab-wrapper-prefix-cls: ~"@{ant-pro-prefix}-multi-tab-wrapper";
-
-/*
-.topmenu .@{multi-tab-prefix-cls} {
-  max-width: 1200px;
-  margin: -23px auto 24px auto;
-}
-*/
-.@{multi-tab-prefix-cls} {
-  margin: -23px -24px 24px -24px;
+.ant-pro-multi-tab {
+  margin: 16px -24px 24px -24px;
   background: #fff;
+  border-bottom: 1px solid #e8e8e8;
+  position: relative;
+  z-index: 101;
+  min-height: 40px;
+  
+  /* 确保标签栏可见 */
+  .ant-tabs {
+    margin: 0;
+  }
+  
+  .ant-tabs-bar {
+    margin: 0;
+    border-bottom: 1px solid #e8e8e8;
+  }
+  
+  .ant-tabs-tab {
+    background: #fafafa;
+    border: 1px solid #d9d9d9;
+    margin-right: 2px;
+    
+    &.ant-tabs-tab-active {
+      background: #fff;
+      border-bottom-color: #fff;
+    }
+  }
 }
 
-.topmenu .@{multi-tab-wrapper-prefix-cls} {
+.ant-pro-multi-tab-wrapper {
+  padding: 0;
+}
+
+.topmenu .ant-pro-multi-tab-wrapper {
   max-width: 1200px;
   margin: 0 auto;
 }
 
-.topmenu.content-width-Fluid .@{multi-tab-wrapper-prefix-cls} {
+.topmenu.content-width-Fluid .ant-pro-multi-tab-wrapper {
   max-width: 100%;
   margin: 0 auto;
 }
